# Currency-ETL-Pipeline

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: ci.yml
dags/: currency_dag.py
sql/: create_tables.sql
src/database/: connection.py
src/extract/: currency_api.py
src/load/: postgres_loader.py
src/transform/: currency_transform.py
src/utils/: logger.py
tests/: conftest.py  test_extract.py  test_load.py  test_transform.py
