[project]
name = "currency-etl-pipeline"
version = "0.1.0"
description = "Pipeline ETL de cotações de moedas com Airflow e PostgreSQL"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-mock>=3.14.0",
    "ruff>=0.4.0",
]

[tool.ruff]
line-length = 79
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "W"]

[tool.ruff.format]
quote-style = "single"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]