[project]
name = "currency-etl-pipeline"
version = "0.1.0"
description = "Pipeline ETL de cotações de moedas com Airflow e PostgreSQL"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "apache-airflow>=3.2.1",
    "pandas>=3.0.3",
    "psycopg2-binary>=2.9.12",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "sqlalchemy>=2.0.49",
]

[dependency-groups]
dev = [
    "apache-airflow>=3.2.1",
    "pandas>=3.0.3",
    "pytest>=8.0.0",
    "pytest-mock>=3.14.0",
    "ruff>=0.4.0",
]

[tool.ruff]
line-length = 79
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "W"]

[tool.ruff.format]
quote-style = "single"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
